human-intervention-logs/it.unimi.dsi:fastutil:8.1.1/gradle-test/gradle-test-2026-05-03T11-44-57-944645Z.log
Starting a Gradle Daemon, 4 busy and 10 incompatible and 182 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: it.unimi.dsi:fastutil:8.1.1
Command: `/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2976-7299cbcb/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 5 busy and 10 incompatible and 181 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :tck-test-support:processResources NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :tck-test-support:classes UP-TO-DATE
> Task :jar UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE

/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2976-7299cbcb/tests/src/it.unimi.dsi/fastutil/8.1.1/src/test/java/it_unimi_dsi/fastutil/FastutilTest.java:346: error: reference to assertThat is ambiguous
> Task :compileTestJava FAILED
        assertThat(clone).isNotSameAs(sequences);

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2976-7299cbcb/tests/src/it.unimi.dsi/fastutil/8.1.1/build/reports/problems/problems-report.html        ^

  both method <T>assertThat(T) in Assertions and method <ELEMENT>assertThat(List<? extends ELEMENT>) in Assertions match
  where T,ELEMENT are type-variables:
    T extends Comparable<? super T> declared in method <T>assertThat(T)
    ELEMENT extends Object declared in method <ELEMENT>assertThat(List<? extends ELEMENT>)
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2976-7299cbcb/tests/src/it.unimi.dsi/fastutil/8.1.1/src/test/java/it_unimi_dsi/fastutil/FastutilTest.java:346: error: reference to assertThat is ambiguous
          assertThat(clone).isNotSameAs(sequences);
          ^
    both method <T>assertThat(T) in Assertions and method <ELEMENT>assertThat(List<? extends ELEMENT>) in Assertions match
    where T,ELEMENT are type-variables:
      T extends Comparable<? super T> declared in method <T>assertThat(T)

      ELEMENT extends Object declared in method <ELEMENT>assertThat(List<? extends ELEMENT>)
Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).


You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 3s
12 actionable tasks: 1 executed, 11 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2976-7299cbcb/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for it.unimi.dsi:fastutil:8.1.1 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 9s
9 actionable tasks: 1 executed, 8 up-to-date
